# roest-analysis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: prd.md  rfc.md  test.md  working.md
scripts/: roest
skills/: roest_analysis.md
src/roest_analysis/: __init__.py  cli.py  config.py  errors.py
src/roest_analysis/analysis/: __init__.py  crack_detection.py  phase_metrics.py  summarize.py
src/roest_analysis/api/: client.py  endpoints.py  models.py
src/roest_analysis/services/: __init__.py  analyze_log.py  fetch_log.py  plot_log.py
src/roest_analysis/visualization/: __init__.py  series.py  svg.py
tests/fixtures/: simple_datapoints.json  simple_log.json
tests/integration/: test_api_client.py  test_cli.py  test_live_api.py  test_plot_cli.py
tests/unit/: test_config.py  test_crack_detection.py  test_phase_metrics.py  test_visualization_series.py
