[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roest-analysis"
version = "0.1.0"
description = "Roest roast log API client and roast analysis toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
roest = "roest_analysis.cli:main"

[tool.pytest.ini_options]
markers = [
  "live_integration: tests that hit the real Roest API",
]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
